# json2python-models

./: .bumpversion.cfg  .coveragerc  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  NOTES.md  README.md  TODO.md  core_requirements.in  core_requirements.txt  dev_requirements.in  dev_requirements.txt  pyproject.toml  pytest-cov.sh  pytest.ini  requirements.txt  setup.py  test_requirements.in  test_requirements.txt  touch
.github/: pytest.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/test/: action.yml
.github/workflows/: pytest.yml  test_and_release.yml  test_every_week.yml
attrs_api/: dynamic_typing.py  generator.py  utils.py
attrs_api/dynamic_typing/: __init__.py  base.py  complex.py  string_serializable.py
json_to_models/: __init__.py  __main__.py  cli.py  generator.py  lazy.py  registry.py  utils.py
json_to_models/dynamic_typing/: __init__.py  base.py  complex.py  models_meta.py  string_datetime.py  string_serializable.py  typing.py
json_to_models/models/: __init__.py  attr.py  base.py  dataclasses.py  pydantic.py  sqlmodel.py  string_converters.py  structure.py  utils.py
rest_client_gen/: generator.py  models_meta.py  registry.py  utils.py
rest_client_gen/dynamic_typing/: __init__.py  base.py  complex.py  models_meta.py  string_datetime.py  string_serializable.py  typing.py
rest_client_gen/models/: __init__.py  attr.py  base.py
test/: conftest.py  test_etc.py  test_generator_detect_type.py  test_generator_merge_field_sets.py  test_generator_optimize_type.py  test_real_apis.py  test_registry_merge_models.py  test_registry_process_meta_data.py  test_string_serializable_registry.py  test_typing_code_generation.py
test/test_cli/: test_argparser.py  test_script.py  test_self_validate_pydantic.py  test_utils.py  utils.py
test/test_cli/data/: file.ini  gists.json  photos.json  spotify-swagger.yaml  unicode.json  users.json
test/test_code_generation/: test_attrs_generation.py  test_dataclasses_generation.py  test_models_code_generator.py  test_models_composition.py  test_pydantic_generation.py  test_sqlmodel_generation.py  test_string_converters.py  test_typing.py
test/test_dynamic_typing/: test_dynamic_typing.py  test_string_datetime.py  test_string_serializable_registry.py
test/test_generator/: test_detect_type.py  test_merge_field_sets.py  test_optimize_type.py
test/test_registry/: test_models_names.py  test_registry_merge_models.py  test_registry_process_meta_data.py
testing_tools/: artists.txt  data.py  large_data_set.json  pprint_meta_data.py  print_open_files.py  spotify-swagger.yaml  swagger.json  test_resolver.py
testing_tools/real_apis/: __init__.py  f1.py  large_data_set.py  large_data_set_github_online.py  openlibrary.py  pathofexile.py  randomapis.py  spotify-swagger.py  swagger.py
