[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "json2python-models"
description = "Python models (pydantic, attrs, dataclasses or custom) generator from JSON data with typing module support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "bogdandm (Bogdan Kalashnikov)", email = "bogdan.dm1995@yandex.ru" }
]
dynamic = ['version', 'dependencies']

[project.urls]
"Repository" = "https://github.com/bogdandm/json2python-models"

[project.optional-dependencies]
test = [
    "pytest>=4.4.0",
    "pytest-xdist",
    "pytest-cov",
    "requests",
    "attrs",
    "pydantic>=1.3",
    "ruamel.yaml",
    "coverage"
]

[project.scripts]
json2models = "json_to_models.cli:main"

[tool.setuptools]
packages = { find = { exclude = ["test", "testing_tools"] } }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "json_to_models.__version__" }
readme = { file = ['README.md'] }

[tool.setuptools.package-data]
"*" = ['*.txt.', '*.ini', ".coveragerc", "LICENSE", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "no_expected: testing data has no expected value",
    "slow_http: api that provides testing data is slow"
]